--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-reanimated')
+    implementation project(':react-native-tts')
+    implementation project(':react-native-voice')
+    implementation project(':react-native-dialogflow')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
