--- a/package.json
+++ b/package.json
@@ -8,20 +8,48 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-dialogflow": "^3.2.2",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-gifted-chat": "^0.9.11",
-    "react-native-voice": "^0.3.0"
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-svg": "^9.6.2",
+    "react-native-svg-charts": "^5.3.0",
+    "react-native-tab-view": "^2.10.0",
+    "react-native-tts": "^3.0.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-voice": "^0.3.0",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-wesbos": "0.0.19",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.3.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
+    "prettier": "^1.16.4",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
