--- a/ios/application/Info.plist
+++ b/ios/application/Info.plist
@@ -2,9 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Your usage description here</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like access to your photo gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like to use your camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like to save photos to your photo gallery</string>
 	<key>NSMicrophoneUsageDescription</key>
+	<string>Your usage description here</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Your usage description here</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
