--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-gifted-chat": "^0.9.11",
+    "react-native-image-picker": "^1.0.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-svg": "^9.6.2",
     "react-native-svg-charts": "^5.3.0",
